[gd_scene load_steps=12 format=2]

[ext_resource path="res://trivia_question/Questions/Question 1/JawapanC.png" type="Texture" id=1]
[ext_resource path="res://trivia_question/Questions/Question 2/JawapanC.png" type="Texture" id=2]
[ext_resource path="res://trivia_question/Questions/Question 2/JawapanB.png" type="Texture" id=3]
[ext_resource path="res://trivia_question/Questions/Question 1/Soalan 1.png" type="Texture" id=4]
[ext_resource path="res://trivia_question/Questions/Question 1/JawapanB.png" type="Texture" id=5]
[ext_resource path="res://trivia_question/Questions/Question 2/Soalan 2.png" type="Texture" id=6]
[ext_resource path="res://trivia_question/Questions/Question 2/JawapanD.png" type="Texture" id=7]
[ext_resource path="res://trivia_question/Questions/Question 1/JawapanD.png" type="Texture" id=8]
[ext_resource path="res://trivia_question/Questions/Question 2/JawapanA.png" type="Texture" id=9]
[ext_resource path="res://trivia_question/Questions/Question 1/JawapanA.png" type="Texture" id=10]
[ext_resource path="res://trivia_question/Questions.gd" type="Script" id=11]

[node name="Questions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question1" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question1Txt" type="TextureRect" parent="Question1"]
margin_left = 333.377
margin_top = 100.888
margin_right = 2134.38
margin_bottom = 1055.89
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerA1Btn" type="TextureButton" parent="Question1"]
margin_left = 370.0
margin_top = 450.0
margin_right = 1271.0
margin_bottom = 768.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 10 )

[node name="AnswerB1Btn" type="TextureButton" parent="Question1"]
margin_left = 658.0
margin_top = 450.0
margin_right = 1559.0
margin_bottom = 768.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )

[node name="AnswerC1Btn" type="TextureButton" parent="Question1"]
margin_left = 370.0
margin_top = 562.0
margin_right = 1271.0
margin_bottom = 880.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerD1Btn" type="TextureButton" parent="Question1"]
margin_left = 658.0
margin_top = 562.0
margin_right = 1559.0
margin_bottom = 880.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 8 )

[node name="Question2" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question2Txt" type="TextureRect" parent="Question2"]
margin_left = 333.377
margin_top = 100.888
margin_right = 2134.38
margin_bottom = 1055.89
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerA2Btn" type="TextureButton" parent="Question2"]
margin_left = 370.0
margin_top = 450.0
margin_right = 1271.0
margin_bottom = 768.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 9 )

[node name="AnswerB2Btn" type="TextureButton" parent="Question2"]
margin_left = 658.0
margin_top = 450.0
margin_right = 1559.0
margin_bottom = 768.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 3 )

[node name="AnswerC2Btn" type="TextureButton" parent="Question2"]
margin_left = 370.0
margin_top = 562.0
margin_right = 1271.0
margin_bottom = 880.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswerD2Btn" type="TextureButton" parent="Question2"]
margin_left = 658.0
margin_top = 562.0
margin_right = 1559.0
margin_bottom = 880.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 7 )
